# MacPackageTest

./: CMakeLists.txt  README.md
a/: A.cpp  A.h  CMakeLists.txt
b/: B.cpp  B.h  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
